# Shared-Mobility-Demo

./: LICENSE  README.md
src/android_application/: velink.apk
src/rpi_application/: .editorconfig  CMakeLists.txt  CMakeSettings.json  README.md
src/rpi_application/data/: Doxyfile.in
src/rpi_application/libs/aardvark-i2c/: .gitignore  CMakeLists.txt  README.md
src/rpi_application/libs/aardvark-i2c/data/: Doxyfile.in  aardvark-i2c-config.cmake.in
src/rpi_application/libs/aardvark-i2c/docs/: error-handling.md
src/rpi_application/libs/aardvark-i2c/include/ifx/: aardvark-i2c.h
src/rpi_application/libs/aardvark-i2c/src/: aardvark-i2c.c  aardvark-i2c.h
src/rpi_application/libs/aes/: CMakeLists.txt  LICENSE
src/rpi_application/libs/aes-openssl/: .gitignore  CMakeLists.txt
src/rpi_application/libs/aes-openssl/data/: aes-openssl-config.cmake.in
src/rpi_application/libs/aes-openssl/src/: openssl_aes.c
src/rpi_application/libs/aes/data/: aes-config.cmake.in
src/rpi_application/libs/aes/include/ifx/: aes.h
src/rpi_application/libs/apdu/: .gitignore  CMakeLists.txt  README.md
src/rpi_application/libs/apdu/data/: Doxyfile.in  apdu-config.cmake.in
src/rpi_application/libs/apdu/docs/: error-handling.md
src/rpi_application/libs/apdu/include/ifx/: apdu.h
src/rpi_application/libs/apdu/src/: apdu.c
src/rpi_application/libs/apdu/tests/: apdu-tests-main.cpp  apdu-tests.cpp
src/rpi_application/libs/apduprotocol/: CMakeLists.txt  README.md
src/rpi_application/libs/apduprotocol/data/: Doxyfile.in  apduprotocol-config.cmake.in
src/rpi_application/libs/apduprotocol/docs/: error-handling.md
src/rpi_application/libs/apduprotocol/include/ifx/: apduprotocol.h
src/rpi_application/libs/apduprotocol/src/: apduprotocol.c
src/rpi_application/libs/blocksec2go/: CMakeLists.txt  README.md
src/rpi_application/libs/blocksec2go/data/: Doxyfile.in  blocksec2go-config.cmake.in
src/rpi_application/libs/blocksec2go/include/ifx/: blocksec2go.h
src/rpi_application/libs/blocksec2go/src/: blocksec2go.c
src/rpi_application/libs/chronotimer/: CMakeLists.txt  README.md
src/rpi_application/libs/chronotimer/data/: Doxyfile.in  chronotimer-config.cmake.in
src/rpi_application/libs/chronotimer/docs/: error-handling.md
src/rpi_application/libs/chronotimer/src/: chronotimer.cpp
src/rpi_application/libs/console-logger/: .gitignore  CMakeLists.txt  README.md
src/rpi_application/libs/console-logger/data/: Doxyfile.in  console-logger-config.cmake.in
src/rpi_application/libs/console-logger/docs/: error-handling.md
src/rpi_application/libs/console-logger/include/ifx/: console-logger.h
src/rpi_application/libs/console-logger/src/: console-logger.c  console-logger.h
src/rpi_application/libs/crc/: CMakeLists.txt  README.md
src/rpi_application/libs/crc/data/: Doxyfile.in  crc-config.cmake.in
src/rpi_application/libs/crc/include/ifx/: crc.h
src/rpi_application/libs/crc/src/: crc.c
src/rpi_application/libs/crc/tests/: crc-tests-main.cpp  crc-tests.cpp
src/rpi_application/libs/i2c/: CMakeLists.txt  README.md
src/rpi_application/libs/i2c/data/: Doxyfile.in  i2c-config.cmake.in
src/rpi_application/libs/i2c/docs/: error-handling.md
src/rpi_application/libs/i2c/include/ifx/: i2c.h
src/rpi_application/libs/ifx-error/: CMakeLists.txt  README.md
src/rpi_application/libs/ifx-error/data/: Doxyfile.in  ifx-error-config.cmake.in
src/rpi_application/libs/ifx-error/include/ifx/: error.h
src/rpi_application/libs/ifx-error/src/: error.c
src/rpi_application/libs/ifx-error/tests/: error-tests-main.cpp  error-tests.cpp
src/rpi_application/libs/logger/: CMakeLists.txt  README.md
src/rpi_application/libs/logger/data/: Doxyfile.in  logger-config.cmake.in
src/rpi_application/libs/logger/docs/: error-handling.md
src/rpi_application/libs/logger/include/ifx/: logger.h
src/rpi_application/libs/logger/src/: logger.c
src/rpi_application/libs/protocol/: CMakeLists.txt  README.md
src/rpi_application/libs/protocol/data/: Doxyfile.in  protocol-config.cmake.in
src/rpi_application/libs/protocol/docs/: error-handling.md
src/rpi_application/libs/protocol/include/ifx/: protocol.h
src/rpi_application/libs/protocol/src/: protocol.c
src/rpi_application/libs/rpi-i2c/: CMakeLists.txt  README.md
src/rpi_application/libs/rpi-i2c/data/: Doxyfile.in  rpi-i2c-config.cmake.in
src/rpi_application/libs/rpi-i2c/docs/: error-handling.md
src/rpi_application/libs/rpi-i2c/include/: bcm2835.h
src/rpi_application/libs/rpi-i2c/include/ifx/: rpi-i2c.h
src/rpi_application/libs/rpi-i2c/src/: bcm2835-mock.c  rpi-i2c.c  rpi-i2c.h
src/rpi_application/libs/scp03/: CMakeLists.txt
src/rpi_application/libs/scp03/data/: Doxyfile.in  scp03-config.cmake.in
src/rpi_application/libs/scp03/src/: gp_general_errors.c  gp_general_errors.h  nist_kdf.c  scp03.c  scp03_crypto.c
src/rpi_application/libs/scp03/tests/: mockdriver.cpp  mockdriver.h  nist_kdf_tests.cpp  scp03_crypto_tests.cpp  scp03_tests.cpp
src/rpi_application/libs/t1prime/: CMakeLists.txt  README.md
src/rpi_application/libs/t1prime/data/: Doxyfile.in  t1prime-config.cmake.in
src/rpi_application/libs/t1prime/docs/: error-handling.md
src/rpi_application/libs/t1prime/src/: t1prime.c  t1prime.h
src/rpi_application/libs/t1prime/tests/: i2c-mock.cpp  spi-mock.cpp  t1prime-datastructures-tests.cpp  t1prime-protocol-tests.cpp  t1prime-tests-main.cpp  timer-mock.cpp
src/rpi_application/libs/timer/: CMakeLists.txt  README.md
src/rpi_application/libs/timer/data/: Doxyfile.in  timer-config.cmake.in
src/rpi_application/libs/timer/docs/: error-handling.md
src/rpi_application/src/application/: =0.9.0  add_user.py  cmd_lib_wrapper.py  device_communication.py  main.py  setup_gen_key_pair.py  setup_gen_vehicle_token.py  smart_contract_interaction.py  status.py  velink_mobility.json  velink_mobility.sol  visualization.py
src/rpi_application/src/se_interface/: CMakeLists.txt
src/rpi_application/src/se_interface/data/: Doxyfile.in  se_interface-config.cmake.in
src/rpi_application/src/se_interface/src/: se_interface.c
(+30 files in other folders)
